kubernetesmanifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wisecow
  labels:
    app: wisecow
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wisecow
  template:
    metadata:
      labels:
        app: wisecow
    spec:
      containers:
        - name: wisecow
          image: us-central1-docker.pkg.dev/agile-transport-435809-a6/wisecow-repo/wisecow:latest  
          ports:
            - containerPort: 4499
          imagePullPolicy: Always
